# contexto-transletto

./: README.md  package.json  tsconfig.json
.github/workflows/: deploy.yml  workflow-config.yml
back-end/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
back-end/src/: auth.rs  main.rs  translate.rs
public/: chrome_manifest.json  firefox_manifest.json  index.html
src/assets/css/: variables.scss
src/background/firefox/: background.ts
src/components/: PopupModal.svelte  TranslationSection.svelte
src/components/App/: App.svelte
src/components/AppWrapper/: AppWrapper.svelte
src/components/DateTime/: DateTime.svelte
src/components/TranslationModal/: TranslationModal.svelte
src/lib/: anki.ts
src/scripts/: translation_modal.ts
web-extension/: .env.example  .gitignore  .prettierrc  components.json  env.example.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js  tailwind.config.ts  tsconfig.json
web-extension/public/: chrome_manifest.json  edge_manifest.json  firefox_manifest.json  popup.html
web-extension/src/: CardWrapper.svelte  background.ts  env.ts  popup.ts
web-extension/src/background/firefox/: background.ts
web-extension/src/components/: AnkiNotAvailable.svelte  Notification.svelte  PopupModal.svelte  Route.svelte  SettingsSection.svelte  TranslationSection.svelte
web-extension/src/lib/: anki.ts  auth.ts  fetchAuthorized.ts  translate.ts  utils.ts
web-extension/src/scripts/: translation_modal.ts
web-extension/webpack/: webpack.common.js
webpack/: package.json  webpack.prod.js
(+19 files in other folders)
